<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_padding" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:layout_marginBottom="10pt"
                android:text="@string/tip_calulator"
                android:textAlignment="center"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/etBillAmount"
                android:autofillHints="0"
                android:hint="@string/enter_bill_amount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_input_height"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinnerTipPercent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_input_height"
                android:layout_marginTop="@dimen/vertical_margin"
                />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:stretchColumns="1"
                android:padding="8dp"
                >
                <TableRow android:padding="4dp">
                    <TextView
                        android:text="@string/tip_amount"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/tvTipAmountValue"
                        android:text="@string/tip_amount_value"
                        android:textSize="18sp"
                        android:gravity="end" />
                </TableRow>

                <TableRow android:padding="4dp">
                    <TextView
                        android:text="@string/total_bill"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/tvTotalValue"
                        android:text="@string/total_bill_value"
                        android:textSize="18sp"
                        android:gravity="end"
                        android:textColor="@android:color/holo_blue_dark" />
                </TableRow>

                <View
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="8dp" />

            </TableLayout>



        </LinearLayout>
        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="30pt"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/calculate_tip" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>